Convert to jquery plugin syntax

--- a/index.html
+++ b/index.html
@@ -10,24 +10,11 @@
 </head>
 <body>
 
-<div class="jquery-schedule">
-    <div class="time"></div>
-    <table>
-        <tr>
-            <td class="container"><div class="wrapper"></div></td>
-            <td class="container"><div class="wrapper"></div></td>
-            <td class="container"><div class="wrapper"></div></td>
-            <td class="container"><div class="wrapper"></div></td>
-            <td class="container"><div class="wrapper"></div></td>
-            <td class="container"><div class="wrapper"></div></td>
-            <td class="container"><div class="wrapper"></div></td>
-        </tr>
-    </table>
-</div>
+<div id="schedule" class="jqs-demo"></div>
 
 <script src="dist/jquery.schedule.js"></script>
 <script>
-
+    $("#schedule").jqs();
 </script>
 
 </body>
