Add prod environment and fix hours issues

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Demo</title>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="dist/jquery.schedule.css">
+    <link rel="stylesheet" href="dist/jquery.schedule-demo.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 </head>
@@ -26,13 +27,15 @@
             {
                 day: 0,
                 periods: [
-                    ["20:00", "00:00"]
+                    ["20:30", "00:00"],
+                    ["10:00", "14:00"]
                 ]
             },
             {
-                day: 5,
+                day: 3,
                 periods: [
-                    ["10:00", "12:00"]
+                    ["00:00", "08:30"],
+                    ["09:00", "12:00"]
                 ]
             }
         ]
