Add 12-hour clock

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ $(function () {
 <script>
     $(function () {
         $("#schedule").jqs({
+            hour: 12,
             mode: "edit"
         });
 
