Fix 12-hour clock display and complete the demo

--- a/index.html
+++ b/index.html
@@ -26,18 +26,13 @@ $(function () {
 <pre>
 $(function () {
     $("#schedule2").jqs({
+        hour: 12,
         data: [
             {
                 day: 0,
                 periods: [
-                    ["20:00", "00:00"],
-                    ["00:00", "02:00"]
-                ]
-            }, {
-                day: 3,
-                periods: [
-                    ["00:00", "08:30"],
-                    ["09:00", "12:00"]
+                    ["10pm", "12am"],
+                    ["12am", "2:30am"]
                 ]
             }
         ]
@@ -59,8 +54,14 @@ $(function () {
                 {
                     day: 0,
                     periods: [
-                        ["10:00pm", "12:00am"],
-                        ["12:00am", "2:00am"]
+                        ["10pm", "12am"],
+                        ["12am", "2:30am"]
+                    ]
+                }, {
+                    day: 3,
+                    periods: [
+                        ["10am", "1pm"],
+                        ["5pm", "11pm"]
                     ]
                 }
             ]
