Fix demo page and license

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@ $(function () {
                     ["10pm", "12am"],
                     ["12am", "2:30am"]
                 ]
+            }, {
+                day: 3,
+                periods: [
+                    ["10am", "1pm"],
+                    ["5pm", "11pm"]
+                ]
             }
         ]
     });
