Add bootstrap 4 to the demo page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>jQuery Schedule Demo</title>
-    <meta name="description" content="">
+    <title>jQuery Schedule v2.0 Demo</title>
+    <meta name="description" content="A schedule management with jQuery and jQuery ui.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
@@ -11,66 +11,142 @@
     <link rel="stylesheet" href="dist/jquery.schedule-demo.css">
 </head>
 <body>
-<h1>jQuery Schedule Demo</h1>
 
-<h2>Edition mode</h2>
-<pre>
-$("#schedule").jqs();
+<header>
+    <nav class="navbar navbar-dark bg-dark mb-3">
+        <h1 class="navbar-brand mb-0">jQuery Schedule Demo v2.0</h1>
+    </nav>
+</header>
+
+<main>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h2>Basic</h2>
+                <pre class="p-2 mb-3">$("#schedule").jqs();</pre>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div id="schedule" class="jqs-demo mb-3"></div>
+            </div>
+        </div>
+
+
+
+        <div class="row">
+            <div class="col">
+                <h2>Read mode</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8">
+                <div id="schedule2" class="jqs-demo mb-3"></div>
+            </div>
+            <div class="col-lg-4">
+            <pre class="p-2 mb-3 large">
+$("#schedule2").jqs({
+    mode: "read",
+    data: [{
+        day: 0,
+        periods: [
+            ["20:00", "00:00"],
+            ["20:00", "22:00"], // Invalid period, not displayed
+            ["00:00", "02:00"]
+        ]
+    }, {
+        day: 3,
+        periods: [
+            ["00:00", "08:30"],
+            ["09:00", "12:00"]
+        ]
+    }]
+});
 </pre>
-<div id="schedule" class="jqs-demo"></div>
+            </div>
+        </div>
 
-<input type="button" value="Export" id="export" />
-<input type="button" value="Import" id="import" />
-<input type="button" value="Reset" id="reset" />
-<pre>
-$("#schedule").jqs('export');
 
-$("#schedule").jqs('import', [
-     {
-         day: 1,
-         periods: [
-             ["8:00", "10:00"],
-         ]
-     }, {
+
+        <div class="row">
+            <div class="col">
+                <h2>Events & Methods</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="btn-group mb-3">
+                    <button type="button" class="btn btn-primary" id="export">Export</button>
+                    <button type="button" class="btn btn-primary" id="import">Import</button>
+                    <button type="button" class="btn btn-warning" id="reset">Reset</button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8">
+                <div id="schedule3" class="jqs-demo mb-3"></div>
+            </div>
+            <div class="col-lg-4">
+            <pre class="p-2 mb-3 large">
+$("#schedule3").jqs({
+    onInit: function () {
+        $("#log").val("onInit fire !\n" + $("#log").val());
+    },
+    onAddPeriod: function () {
+        $("#log").val("onAddPeriod fire !\n" + $("#log").val());
+    },
+    onRemovePeriod: function () {
+        $("#log").val("onRemovePeriod fire !\n" + $("#log").val());
+    },
+    onPeriodClicked: function () {
+        $("#log").val("onPeriodClicked fire !\n" + $("#log").val());
+    }
+});
+
+$("#schedule3").jqs('export');
+
+$("#schedule3").jqs('import', [
+    {
+        day: 1,
+        periods: [
+            ["8:00", "10:00"]
+        ]
+    }, {
         day: 4,
         periods: [
             ["20:00", "00:00"],
-            ["00:00", "02:00"]
+            ["20:00", "22:00"], // Invalid period, not displayed
         ]
     }
 ]);
 
-$("#schedule").jqs('reset');
+$("#schedule3").jqs('reset');
 </pre>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <textarea id="result" class="mb-3"></textarea>
+            </div>
+            <div class="col-lg-6">
+                <textarea id="log" class="mb-3"></textarea>
+            </div>
+        </div>
 
-<textarea id="result"></textarea>
 
-<h2>Read mode</h2>
-<pre>
-$("#schedule2").jqs({
-    mode: "read",
-    data: [
-        {
-            day: 0,
-            periods: [
-                ["20:00", "00:00"],
-                ["00:00", "02:00"]
-            ]
-        }, {
-            day: 3,
-            periods: [
-                ["00:00", "08:30"],
-                ["09:00", "12:00"]
-            ]
-        }
-    ]
-});
-</pre>
-<div id="schedule2" class="jqs-demo"></div>
 
-<h2>Translation & 12-hour clock</h2>
-<pre>
-$("#schedule3").jqs({
+        <div class="row">
+            <div class="col">
+                <h2>Translation & 12-hour clock</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8">
+                <div id="schedule4" class="jqs-demo mb-3"></div>
+            </div>
+            <div class="col-lg-4">
+            <pre class="p-2 mb-3 large">
+$("#schedule4").jqs({
     mode: "read",
     days: ["Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi", "Dimanche"],
     hour: 12,
@@ -81,11 +157,24 @@ $("#schedule3").jqs({
                 ["10pm", "12am"],
                 ["12am", "2:30am"]
             ]
+        }, {
+            day: 1,
+            periods: [
+                ["1:45am", "5:15am"],
+                ["10am", "12pm"]
+            ]
         }
     ]
 });
 </pre>
-<div id="schedule3" class="jqs-demo"></div>
+            </div>
+        </div>
+    </div>
+</main>
+
+<footer>
+
+</footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
@@ -96,25 +185,38 @@ $("#schedule3").jqs({
 
         $("#schedule2").jqs({
             mode: "read",
-            data: [
-                {
-                    day: 0,
-                    periods: [
-                        ["20:00", "00:00"],
-                        ["20:00", "22:00"],
-                        ["00:00", "02:00"]
-                    ]
-                }, {
-                    day: 3,
-                    periods: [
-                        ["00:00", "08:30"],
-                        ["09:00", "12:00"]
-                    ]
-                }
-            ]
+            data: [{
+                day: 0,
+                periods: [
+                    ["20:00", "00:00"],
+                    ["20:00", "22:00"], // Invalid period, not displayed
+                    ["00:00", "02:00"]
+                ]
+            }, {
+                day: 3,
+                periods: [
+                    ["00:00", "08:30"],
+                    ["09:00", "12:00"]
+                ]
+            }]
         });
 
         $("#schedule3").jqs({
+            onInit: function () {
+                $("#log").val("onInit fire !\n" + $("#log").val());
+            },
+            onAddPeriod: function () {
+                $("#log").val("onAddPeriod fire !\n" + $("#log").val());
+            },
+            onRemovePeriod: function () {
+                $("#log").val("onRemovePeriod fire !\n" + $("#log").val());
+            },
+            onPeriodClicked: function () {
+                $("#log").val("onPeriodClicked fire !\n" + $("#log").val());
+            }
+        });
+
+        $("#schedule4").jqs({
             mode: "read",
             days: ["Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi", "Dimanche"],
             hour: 12,
@@ -125,41 +227,32 @@ $("#schedule3").jqs({
                         ["10pm", "12am"],
                         ["12am", "2:30am"]
                     ]
-                },{
+                }, {
                     day: 1,
                     periods: [
                         ["1:45am", "5:15am"],
                         ["10am", "12pm"]
-                    ]
-                }, {
-                    day: 2,
-                    periods: [
-                        ["5:45", "6:15"],
-                        ["10", "2p"],
-                        ["6p", "8p"],
-                        ["8:15p", "9p"]
                     ]
                 }
             ]
         });
 
         $("#export").click(function () {
-            $("#result").val($("#schedule").jqs('export'));
+            $("#result").val($("#schedule3").jqs('export'));
         });
 
         $("#import").click(function () {
-             var ret = $("#schedule").jqs('import', [
-                 {
-                     day: 1,
-                     periods: [
-                         ["8:00", "10:00"]
-                     ]
-                 }, {
+            var ret = $("#schedule3").jqs('import', [
+                {
+                    day: 1,
+                    periods: [
+                        ["8:00", "10:00"]
+                    ]
+                }, {
                     day: 4,
                     periods: [
                         ["20:00", "00:00"],
-                        ["20:00", "22:00"],
-                        ["00:00", "02:00"]
+                        ["20:00", "22:00"] // Invalid period, not displayed
                     ]
                 }
             ]);
@@ -168,7 +261,8 @@ $("#schedule3").jqs({
         });
 
         $("#reset").click(function () {
-            $("#schedule").jqs('reset');
+            $("#schedule3").jqs('reset');
+            $("#result").val("");
         });
     });
 </script>
